# app/Http/Requests/Resetpasswordrequest.php
@@ -1,0 +1,52 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
+use Illuminate\Contracts\Validation\Validator;
+
+
+class Resetpasswordrequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'email'=>'required|string',
+            'token'=>'required|string',
+            'password'=>'required|string|min:8|confirmed'
+        ];
+    }
+    public function messages(): array
+    {
+        return[
+            'email.required'=>'Email is required',
+            'token.required'=>'Token is required',
+            'password.required'=>'password is required',
+            'password.confirmed'=>'Retype password is required'
+        ];
+    }
+    protected function failedValidation(Validator $validator)
+    {
+        throw new HttpResponseException(
+            response()->json([
+                'status'  => false,
+                'message' => 'Validation failed.',
+                'errors'  => $validator->errors(),
+            ], 422)
+        );
+    }
+}
